force-app/main/default/objects/custom_create235__c/custom_create235__c.object-meta.xml
<CustomObject>
    <label>Custom created object235</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects235</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>