force-app/main/default/objects/custom_create235__c/fields/custom_create_235field558__c.field-meta.xml
<CustomField>
    <fullName>custom_create_235field558__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 235field558</label>
    <type>Checkbox</type>
</CustomField>